--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Vincent Wong
+title: Vincent Wong - Software Engineer
 email: vincent@vwong.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  Full stack software engineer based in Sydney, Australia. Current student of Computer Science and Mathematics at UNSW.
+  Sydney Based Full Stack Developer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vwong.dev" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: V-Wong
