--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Vincent Wong - Software Engineer
+author: Vincent Wong
 email: vincent@vwong.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Software engineer based in Sydney, Australia.
-  Current computer science and mathematics student at UNSW.
+  Graduate of Computer Science and Applied Mathematics from UNSW.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vwong.dev" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: V-Wong
+linkedin_username: vincent-wc-wong
 google_analytics: UA-164616925-1
 
 # Build settings
