--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "study_notes/COMP3141"]
 	path = study_notes/COMP3141
 	url = git@github.com:V-Wong/COMP3141.git
+[submodule "study_notes/COMP3891"]
+	path = study_notes/COMP3891
+	url = git@github.com:V-Wong/COMP3891.git
