Add COMP3311 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "study_notes/COMP3821"]
 	path = study_notes/COMP3821
 	url = git@github.com:V-Wong/COMP3821.git
+[submodule "study_notes/COMP3311"]
+	path = study_notes/COMP3311
+	url = git@github.com:V-Wong/COMP3311.git
