--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "study_notes/COMP9315"]
-	path = study_notes/COMP9315
+	path = notes/COMP9315
 	url = git@github.com:V-Wong/COMP9315.git
 [submodule "study_notes/COMP3141"]
-	path = study_notes/COMP3141
+	path = notes/COMP3141
 	url = git@github.com:V-Wong/COMP3141.git
 [submodule "study_notes/COMP3891"]
-	path = study_notes/COMP3891
+	path = notes/COMP3891
 	url = git@github.com:V-Wong/COMP3891.git
 [submodule "study_notes/COMP3821"]
-	path = study_notes/COMP3821
+	path = notes/COMP3821
 	url = git@github.com:V-Wong/COMP3821.git
 [submodule "study_notes/COMP3311"]
-	path = study_notes/COMP3311
+	path = notes/COMP3311
 	url = git@github.com:V-Wong/COMP3311.git
