--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,12 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-titles-from-headings
 
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: false
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
