--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Vincent Wong - Software Engineer
 author: Vincent Wong
 email: vincent@vwong.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  Software engineer based in Sydney, Australia.
-  Graduate of Computer Science and Applied Mathematics from UNSW.
+  Software engineer at Atlassian in Sydney.
+  Graduate of applied mathematics and computer science from UNSW.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vwong.dev" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: V-Wong
@@ -33,10 +33,9 @@ plugins:
   - jekyll-titles-from-headings
 
 titles_from_headings:
-  enabled:     true
+  enabled: true
   strip_title: true
   collections: false
-
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
